fix vagrant text wrapping

--- a/src/components/landing-hero/landing-hero.module.css
+++ b/src/components/landing-hero/landing-hero.module.css
@@ -20,6 +20,7 @@
 	composes: g-offset-scroll-margin-top from global;
 	color: var(--token-color-foreground-strong);
 	margin-bottom: 8px;
+	width: 100%;
 }
 
 .pageSubtitle {
